# VaayuTrade

./: .editorconfig  .eslintrc.cjs  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  commitlint.config.cjs  conftest.py  discovery_questionnaire.txt  eslint.config.mjs  mypy.ini  package.json  pnpm-lock.yaml  pyproject.toml  task_list.txt  tsconfig.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: apply-branch-protection.yml  ci.yml  codeql.yml  secret-scan.yml  terraform-validate.yml
.husky/: commit-msg
.husky/_/: husky.sh
docs/: README.md
infra/db/: README.md  alembic.ini  check_migrations.py  env.py
infra/db/versions/: 0001_baseline_schema.py
infra/github/: bootstrap_security.sh
infra/terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/terraform/modules/storage/: README.md  main.tf  outputs.tf  variables.tf
infra/terraform/modules/vpc/: README.md  main.tf  variables.tf
js-tests/: sanity.test.js
tests/: conftest.py
tests/db/: conftest.py  test_health.py  test_repositories.py
