[tool.poetry]
name = "vaayutrade"
version = "0.0.0"
description = "VaayuTrade monorepo"
authors = ["Tapish <tapish331@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pydantic = "^2.7"
sqlalchemy = "^2.0"
alembic = "^1.13"
psycopg = {version = "^3.1", extras = ["binary"]}
asyncpg = "^0.30.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"
black = "^24.8.0"
mypy = "^1.11.1"
types-requests = "^2.32.0.20240712"
pytest = ">=7.4"
pytest-asyncio = ">=0.23"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["node_modules", ".venv", "venv", "dist", "build"]
lint.select = ["E","F","I","UP","B","SIM","N","ARG"]
lint.ignore = ["E501"]  # handled by Black

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
pretty = true
show_error_codes = true
exclude = '(packages/common/(?!db)|tests/(?!db)|node_modules|\.venv|venv|dist|build)'
explicit_package_bases = true
# Only type-check the async DB layer and its tests
files = ["packages/common/db", "tests/db"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "strict"
testpaths = ["tests"]
